<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_tokoku"
        android:icon="@drawable/ic_business_black_24dp"
        android:title="@string/nav_tokoku" />
    <item
        android:id="@+id/nav_inbox"
        android:icon="@drawable/ic_inbox_black_24dp"
        android:title="@string/nav_inbox" />
    <item
        android:id="@+id/nav_keranjang"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/nav_keranjang" />
    <item
        android:id="@+id/nav_akun"
        android:icon="@drawable/ic_perm_identity_black_24dp"
        android:title="@string/nav_akun" />
</menu>